<package format="3">
    <name>go2_base</name>
    <version>0.1.0</version>
    <description>The go2_base package</description>
    <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
    <license>Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    
    <build_depend>rcl</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>go2_srvs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>rcl</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>go2_srvs</exec_depend>
    
    <depend>unitree_api</depend>
    <depend>unitree_go</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>eigen</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
        
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>