<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_control</name>
  <version>1.2.0</version>
  <description>Go2 control Package</description>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Private</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>interactive_marker_twist_server</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>