<package format="3">
    <name>go2_srvs</name>
    <version>0.1.0</version>
    <description>The go2_srvs package</description>
    <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <buildtool_depend>rosidl_default_runtime</buildtool_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>